@@ -1,5 +1,6 @@
 2003-08-15  Niklas Knutsson  <nq@altern.org>
 
+	* Fix bracket madness breaking unbrackened division (!)
 	* About dialog
 
 2003-08-14  Niklas Knutsson  <nq@altern.org>
